[package]
name = "dex-market"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
fixed = "1.24"

soroban-sdk = { workspace = true }

orderbook = { path = "../../orderbook" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
soroban-token-sdk = { workspace = true }